# jobpostprofiler

./: .env.example  Makefile  README.md  my_skills.example.json  pyproject.toml  tracker_cli.py
.streamlit/: config.toml
docs/: ARCHITECTURE.md  cli.md
src/jobpostprofiler/: config.py  main.py  pipeline.py
src/jobpostprofiler/core/: classifier.py  fetcher.py  renderer.py  skill_match.py
src/jobpostprofiler/db/: store.py
src/jobpostprofiler/llm/: client.py  prompts.py
src/jobpostprofiler/models/: job_models.py  qa_models.py
src/jobpostprofiler/ui/: app.py  ui_components.py
