[project]
name = "jobpostprofiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic>=2.0",
    "streamlit",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "jinja2",
    "selenium",
    "pypdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpostprofiler"]
